<resources>
    <string name="app_name">Big Chef Cafe</string>

    <string name="navigation_drawer_open">Open navigation drawer
    </string>

    <string name="navigation_drawer_close">Close navigation drawer
    </string>

    <string name="action_settings">Settings
    </string>

    <string name="postal_person_id"><b>Личный кабинет</b>
    </string>

    <string name="about_text"><b>О кафе</b>
    </string>

    <string name="about_text2">Превосходная Восточная Халяль кухня; Восхитительные блюда на мангале по-восточному, свежая турецкая выпечка; горячая пицца, восточные и классические десерты, ароматный чай и свежесваренный кофе.\n\nКафе домашнего уюта и тепла для семейного отдыха:\n- детский игровой уголок для активных игр,\n- детское меню,\n- отдельный зал для детских праздников.\n\nНаходимся в географическом центре города.\nАдрес: Уфа, Проспект Октября, 71/4\nПроезд: до ост. "Ж/д больница"\nТелефон: +7(347)294-13-43\nВремя работы: круглосуточно
    </string>

    <string name="about_app_text"><b>О приложении</b>
    </string>

    <string name="feedback_text"><b>Обратная связь</b>
    </string>

    <string name="feedback_text2">Здесь вы можете оставить свой отзыв о кафе или о работе приложения. Все отзывы отправляются администратору заведения и разработчику приложения
    </string>

    <string name="about_app_text2">Приложение "Big Chef Ufa"  позволяет оформить доставку заказа на дом. С помощью данного приложения можно оформить заказ в 3 клика, а так же сохранить ввёденную личную информацию, что бы в дальнейшем не тратить время на повторный ее ввод в личном кабинете.
    </string>

    <string name="nav_star"></string>

    <string name="pravila_pri_zakaze">- Доставка на текущее время осуществляется в течение 1,5 часов (+\\- 15 минут) после звонка администратора.\n- Если Вы готовы забрать заказ сами, он будет готов через 40 минут.\n- Если за указанное время вам не привезли заказ, позвоните нам: 294-13-43
    </string>

    <string name="deistv"> <b>При заказе действуют правила:</b>
    </string>

     <string name="mangal2"> <b>При заказе блюд на мангале в заказ включены:</b>
    </string>

    <string name="mangal">- Лепешки и соус - из расчета 100 гр. и 30 мл. на порцию блюд
    </string>

    <string name="o_dostavke"> <b>О доставке</b>
    </string>

    <string name="besplatnaya_dostavka"> <b>Стоимость доставки заказов зависит от района доставки:</b>
    </string>

    <string name="ulitsi"> Пр. Октября, ул. Комсомольская, Российская при сумме заказа от 800 рублей - <b>БЕСПЛАТНАЯ доставка</b>\n\nЧерниковка, Сипайлово, Центр города при сумме заказа от 1000 рублей - <b>БЕСПЛАТНАЯ доставка</b>\n\nЗелёная роща, ХБК, ул. Пугачева при сумме заказа от 1200 рублей - <b>БЕСПЛАТНАЯ доставка</b>\n\nШакша, Дёма, Инорс, Затон при сумме заказа от 1500 рублей - <b>БЕСПЛАТНАЯ доставка</b>
</string>
    <string name="about_app_text_3">С помощью обратной связи есть возможность задать интересующие вопросы администратору заведения и разработчику приложения.</string>
    <string-array name="feedback_spinner_id">
        <item>О работе кафе и службы доставки</item>
        <item>О работе приложения</item>
    </string-array>

    </resources>